Updating config, making aws messaging optional

--- a/example_pool.cfg
+++ b/example_pool.cfg
@@ -14,4 +14,39 @@ share_db_uri=jdbc:mysql://localhost/sharedb
 share_db_username=someuser
 share_db_password=lobsterdb
 
+#
+# Use Amazon Messaging (SQS and SNS) to decouple workers submitting work
+# from your database layer.  If used, work records are sent through SNS to SQS
+# and then read and put into your database.  That way, work is still recorded
+# and ends up saved in SQS if your database is down or slow for a time.
+#
+saver_messaging_enabled=yes
+
+# An SNS topic (ideally near by) which takes messages for work records
+# Note: region is determined from topic arn and doesn't need to be configured
+saver_messaging_topic_arn=arn:aws:sns:us-west-2:123456789000:shareprocessing
+saver_messaging_aws_key=AWS_KEY_ID
+saver_messaging_aws_secret=SECRET_KEY
+
+#
+# SQS queue and region which must be subscribed to the above SNS topic.
+# Does not need to be the same region as the SNS topic.
+# See http://hhtt.1209k.com/ha.php for an example.
+#
+saver_messaging_sqs_region=us-west-2
+saver_messaging_sqs_queue_url=https://sqs.us-west-2.amazonaws.com/123456789000/shareprocessing
+saver_messaging_read_threads=1
+
+#
+# Where to save metrics
+#
+metrics_aws_region=us-west-2
+metrics_aws_key=AWS_KEY_ID
+metrics_aws_secret=SECRET_KEY
+
+# Used for some metrics
+instance_id=node_a
+
+# Text to put in each coinbase TX
+coinbase_text=bug_bear_pool
 
