Adding flag to turn off metrics

--- a/example_pool.cfg
+++ b/example_pool.cfg
@@ -40,6 +40,7 @@ saver_messaging_read_threads=1
 #
 # Where to save metrics
 #
+metrics_enabled=true
 metrics_aws_region=us-west-2
 metrics_aws_key=AWS_KEY_ID
 metrics_aws_secret=SECRET_KEY
