Adding witty remarks to blockchain

--- a/example_pool.cfg
+++ b/example_pool.cfg
@@ -51,3 +51,5 @@ instance_id=node_a
 # Text to put in each coinbase TX
 coinbase_text=bug_bear_pool
 
+# Use optional database of extra text to put in coinbase transactions
+witty_remarks_enalbed=false
