Adding async block notify

--- a/example_pool.cfg
+++ b/example_pool.cfg
@@ -9,6 +9,15 @@ bitcoind_password=lobster
 bitcoind_host=localhost
 bitcoind_port=8332
 
+# Optional to use this feature, but speeds up detection
+# of new blocks.
+# To use, compile udpping in 'cpp' directory:
+#   cd cpp
+#   make udpping
+# Then run your bitcoind like this:
+#   bitcoind  -blocknotify="PATH/udpping localhost 19191"
+notify_port=19191
+
 share_db_driver=com.mysql.jdbc.Driver
 share_db_uri=jdbc:mysql://localhost/sharedb
 share_db_username=someuser
