Added default_difficulty to example.cfg

--- a/example_pool.cfg
+++ b/example_pool.cfg
@@ -9,6 +9,9 @@ bitcoind_password=lobster
 bitcoind_host=localhost
 bitcoind_port=8332
 
+# Optional default difficulty, 32 if not specified.
+# default_difficulty=32
+
 # Optional to use this feature, but speeds up detection
 # of new blocks.
 # To use, compile udpping in 'cpp' directory:
@@ -62,5 +65,4 @@ coinbase_text=bug_bear_pool
 
 # Use optional database of extra text to put in coinbase transactions
 witty_remarks_enabled=false
-
 
