Adding event log to help track down strange orphan problem

--- a/example_pool.cfg
+++ b/example_pool.cfg
@@ -66,3 +66,8 @@ coinbase_text=bug_bear_pool
 # Use optional database of extra text to put in coinbase transactions
 witty_remarks_enabled=false
 
+# Timestamped log of important events
+event_log_enabled=true
+event_log_path=log/event.log
+
+
